# ruvo

./: .gitignore  Cargo.toml  MANIFEST.in  README.md  pyproject.toml  setup.py
src/: cli.rs  error.rs  main.rs
src/core/: environment.rs  mod.rs  store.rs
src/handlers/: activate.rs  create.rs  delete.rs  list.rs  mod.rs
src/utils/: mod.rs  ui.rs
tests/: integration_tests.rs
