[package]
name = "ruvo"
version = "0.1.0"
edition = "2021"
authors = ["Aalekh Roy"]
description = "A powerful Python virtual environment manager with support for multiple environment types"
license = "MIT"
repository = "https://github.com/RoyAalekh/ruvo"
documentation = "https://github.com/RoyAalekh/ruvor#readme"
readme = "README.md"
keywords = ["ruvo", "python", "virtualenv", "development", "tools", "cli"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
    "target/**/*",
    "test-env/**/*",
    "test-env-2/**/*",
    "Cargo.lock",
    "**/*.rs.bk",
    ".git/**/*"
]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
directories = "5.0"
which = "4.4"
log = "0.4"
env_logger = "0.10"
chrono = { version = "0.4", features = ["serde"] }
colored = "2.0"
indicatif = "0.17"
console = "0.15"
dialoguer = "0.11"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.2"
rand = "0.8"